set detail view name, description color sizes

--- a/web/partials/printshop_category.html
+++ b/web/partials/printshop_category.html
@@ -15,7 +15,7 @@
                         <!-- Product Image -->
                         <div class="pro-image">
                             <!-- <a ng-href="../printshop/dist/#/product/selection/{{product.pk}}/white" target="_blank">-->
-                            <a ui-sref="printshopDetail({category:product.pk,product:product.pk})">
+                            <a ui-sref="printshopDetail({category:category,product:product.pk})">
                                 <img ng-src="{{product.images[0]}}"/>
                                 <span class="pro-label great-deal">
                                     popular!
