--- a/web/partials/printshop.html
+++ b/web/partials/printshop.html
@@ -15,7 +15,7 @@
                     <div class="product-grid-wider">
                         <!-- Product Image -->
                         <div class="pro-image">
-                            <a ui-sref="printshopCategory({category:product.pk})">
+                            <a ui-sref="printshopCategory({category:product.pk,categoryName:product.name})">
                                 <img ng-src="{{product.image}}"/>
                                 <span class="pro-label great-deal">
                                     popular!
