--- a/web/partials/printshop_category.html
+++ b/web/partials/printshop_category.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <h2>
-                    {{category}}
+                    {{categoryName}}
                 </h2>
                 <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3" ng-repeat="product in products">
                     <div class="product-grid-wider">
