--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -5,7 +5,7 @@
     margin-top: 0px;
   }
   .pages {
-    margin-top: 70px;
+    margin-top: 100px;
   }
   .pages h1 {
     font-size: 34px;
@@ -78,6 +78,9 @@
   .logo {
     padding-left: 20px;
     margin-bottom: 20px;
+  }
+  .pages {
+    margin-top: 100px;
   }
   .pages h1 {
     clear: both;
