Add FAQ,terms and policy page

--- a/web/assets/less/footer.less
+++ b/web/assets/less/footer.less
@@ -57,19 +57,13 @@
 	}
 }
 .footer-bottom {
-	background: #333333 none repeat scroll 0 0;
+	background: #333333;
 	padding: 24px 0;
-	.copyright {
-		p {
-			color: @color_5;
-			font-size: 12px;
-			a {
-				color: @color_17;
-				font-weight: bold;
+
+	a {
+				color: @color_5;
 				&:hover {
 					color: @color_6;
 				}
 			}
-		}
-	}
 }
