--- a/web/assets/less/page.less
+++ b/web/assets/less/page.less
@@ -10,7 +10,27 @@
 		padding: 10px;
 	}
 
+ul {
+	padding-left: 40px;
+	padding-right: 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
 
+	margin: 0;
+	li{
+		padding-left: 5px;
+	}
+}
+ol {
+	padding-left: 40px;
+	padding-right: 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin: 0;
+	li{
+		padding-left: 5px;
+	}
+}
 }
 
 .faq{
