--- a/web/assets/less/common.less
+++ b/web/assets/less/common.less
@@ -21,9 +21,13 @@
 	}
 }
 html {
+	margin: 0;
+	padding: 0;
 	height: 100%;
 }
 body {
+	margin: 0;
+	padding: 0;
 	height: 100%;
 	background: @color_white;
 	color: @color_1;
@@ -32,6 +36,20 @@ body {
 	font-weight: normal;
 	position: relative;
 	-webkit-font-smoothing: antialiased;
+}
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+#content {
+	padding-bottom:200px; /* Height of the footer element */
+}
+footer{
+	position: absolute;
+	left:0;
+	bottom: 0;
+	width: 100%;
+	height: 100px;
 }
 h1 {
 
@@ -150,14 +168,7 @@ img {
 	transition: all 0.3s ease 0s;
 	max-width: 100%;
 }
-ul {
-	list-style: none;
-	margin: 0;
-}
-ol {
-	list-style: none;
-	margin: 0;
-}
+
 
 textarea {
 	&:-moz-placeholder {
