set route for customization

--- a/web/partials/printshop_detail.html
+++ b/web/partials/printshop_detail.html
@@ -77,7 +77,7 @@
 
 						</div>
 						<div class="pro-info-actions-2 text-center fix">
-							<a ui-sref="custom">
+							<a ui-sref="custom.images.home">
 							<button  class="pro-info-addcart"><i class="mo-cart"></i>CUSTOMIZE IT!</button>
 							</a>
 						</div>
