remove image edit

--- a/myapp/src/app/views/image.html
+++ b/myapp/src/app/views/image.html
@@ -10,7 +10,7 @@
       <li ui-sref-active="active" ><a ui-sref="custom.images.clip-art" translate>Clip Art</a></li>
       <li ui-sref-active="active"><a ui-sref="custom.images.upload" translate>Upload image</a></li>
       <li ui-sref-active="active"><a ui-sref="custom.images.my-images" translate>My images</a></li>
-      <li ui-sref-active="active" class="edit"><a ui-sref="custom.images.edit" translate>Edit image</a></li>
+      <!--<li ui-sref-active="active" class="edit"><a ui-sref="custom.images.edit" translate>Edit image</a></li>-->
     </ul>
     
 </div>
