calculate height and width

--- a/myapp/src/app/assets/less/common.less
+++ b/myapp/src/app/assets/less/common.less
@@ -193,6 +193,6 @@ span {
 	color: @color_5;
 	display: inline-block;
 }
- #drawingArea:hover {
+ #drawingArea canvas:hover {
 outline: 1px dashed #272727
 }
