--- a/myapp/src/app/assets/less/common.less
+++ b/myapp/src/app/assets/less/common.less
@@ -196,3 +196,13 @@ span {
  #drawingArea canvas:hover {
 outline: 1px dashed #272727
 }
+
+.clipArt-thumbnail img {
+	width: 50px;
+	height: 50px;
+}
+.dropdown-clipart {
+	padding: 0;
+    width: 335px;
+
+}
